# arcstat

./: CHANGELOG.md  Cargo.toml  README.md  flake.nix
src/: config.rs  lib.rs  main.rs  systems.rs
src/config/: cli.rs  mod.rs
