[package]
name = "arcstat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
archive_systems = { git = "https://github.com/massivebird/archive_systems" }
colored = "2.0.0"
regex = "1.8.2"
walkdir = "2"
