[package]
name = "arcstat"
version = "0.1.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arcconfig = "0.3"
clap = { version = "4.4.11", features = ["cargo"] }
colored = "2.1.0"
regex = "1.8.2"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
