[package]
name = "arcstat"
version = "0.1.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arcconfig = "0.4.0"
clap = { version = "4.4.11", features = ["cargo"] }
colored = "2.1.0"
rayon = "1.10.0"
regex = "1.8.2"
tabled = { version = "0.18.0", features = ["ansi"] }
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
